<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:padding="5dp"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/edit_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:hint="@string/codigo"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n"
            android:padding="5dp"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/edit_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_ins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ins"
            android:layout_margin="2dp"/>
        <Button
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:layout_margin="2dp"/>
        <Button
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:layout_margin="2dp"/>
        <Button
            android:id="@+id/btn_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con"
            android:layout_margin="2dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
